--- a/admin/index.html
+++ b/admin/index.html
@@ -41,10 +41,10 @@ a:hover {cursor:pointer}
 
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
 		<ul class="nav menu">
-			<li class="active"><a href="index.html"><svg class="glyph stroked app-window"><use xlink:href="#stroked-app-window"></use></svg> Main info</a></li>
-			<!--li><a href="forms.html"><svg class="glyph stroked pencil"><use xlink:href="#stroked-pencil"></use></svg> Control</a></li-->
-			<li><a href="logout.html"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Logout</a></li>
+			<li class="active"><a><svg class="glyph stroked app-window"><use xlink:href="#stroked-app-window"></use></svg> Thông tin</a></li>
+			<li><a href="utils.html"><svg class="glyph stroked app-window"><use xlink:href="#stroked-app-window"></use></svg> Công cụ</a></li>
 			<li role="presentation" class="divider"></li>
+			<li><a href="logout.html"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Đăng xuất</a></li>
 			<li role="presentation" class="divider"></li>
 		</ul>
 		<div class="attribution">Template by <a href="http://www.medialoot.com/item/lumino-admin-bootstrap-template/">Medialoot</a><br/><a href="http://www.glyphs.co" style="color: #333;">Icons by Glyphs</a></div>
